--- a/_config.yml
+++ b/_config.yml
@@ -47,13 +47,13 @@ author:
   # twitter:             <username>
 
 # Add links to the sidebar.
-menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
-  - title:             About
-    url:               /about/
+# menu:
+#   - title:             Algorithm
+#     url:               /algorithm/
+#   - title:             Daily
+#     url:               /day/
+#   - title:             Study
+#     url:               /study/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -66,20 +66,21 @@ legal:
     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             © 2023. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
-paginate:              5
+paginate:              10
 paginate_path:         /:num/
 
 
 # Theme
 # ---------------------------------------------------------------------------------------
 
-#theme: jekyll-theme-hydejack
+#여기
+# theme: jekyll-theme-hydejack
 remote_theme: hydecorp/hydejack@v9
 
 
