댓글 기능 추가

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-#여기
+# 여기
 # theme: jekyll-theme-hydejack
 remote_theme: hydecorp/hydejack@v9
 
@@ -172,9 +172,45 @@ kramdown:
 # To remove Google Anaylics from your page, remove the line below.
 # google_analytics:      UA-XXXXXXXX-X
 
+# Set which comment system to use
+comments:
+  # 'disqus' / 'giscus' / 'utterances' are available
+  provider:            giscus
+
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
-# disqus:                <username>
+# disqus:                Junho1224github
+
+
+# You must install utterances github app before use.(https://github.com/apps/utterances)
+# Make sure all variables are set properly. Check below link for detail.
+# https://utteranc.es/
+# utterances:
+#   repo:                "Junho1224/Junho1224.github.io"
+#   issue-term:          "pathname"
+#   label:               "Comments"
+#   theme:               "photon-dark"
+
+# You must install giscus github app before use.(https://github.com/apps/giscus)
+# Make sure all variables are set properly. Check below link for detail.
+# https://giscus.vercel.app/
+giscus:
+  repo:                "Junho1224/Junho1224.github.io"
+  repo-id:             "R_kgDOJfQ7Yw"
+  category:            "Comments"
+  category-id:         "DIC_kwDOJfQ7Y84CWfXA"
+  mapping:             "pathname"
+  reaction-enabled:    "1"
+  data-emit-metadata:  "0"
+  theme:               "dark_dimmed"
+  data-lang:           "ko"
+  crossorigin:         "anonymous"
+
+lightbox:              true
+
+
+
+
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # PRO version only!
