--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ paginate_path:         /:num/
 # ---------------------------------------------------------------------------------------
 
 # 여기
-# theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+# remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
@@ -202,7 +202,7 @@ giscus:
   mapping:             "pathname"
   reaction-enabled:    "1"
   data-emit-metadata:  "0"
-  theme:               "dark_dimmed"
+  theme:               "light_protanopia"
   data-lang:           "ko"
   crossorigin:         "anonymous"
 
@@ -223,10 +223,10 @@ lightbox:              true
 
 hydejack:
   # Configure the order of complementary content on blog posts
-  post_addons:         [about, newsletter, related, random, comments]
+  post_addons:         [about, comments]
 
   # Configure the order of complementary content on project pages
-  project_addons:      [about, newsletter, other, comments]
+  project_addons:      [about, other, comments]
 
   # Set to `true` if you don't want to show an icon indicating external links
   no_mark_external:    false
