--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ paginate_path:         /:num/
 # ---------------------------------------------------------------------------------------
 
 # 여기
-theme: jekyll-theme-hydejack #이거임 이거
-# remote_theme: hydecorp/hydejack@v9
+# theme: jekyll-theme-hydejack
+remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
